Fix Vercel config: Use rewrites instead of routes for modern Vercel CLI

--- a/vercel.json
+++ b/vercel.json
@@ -9,70 +9,50 @@
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
+      "source": "/assets/(.*)",
+      "destination": "/assets/$1"
     },
-    {
-      "src": "/(.*\\.js)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*\\.css)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*\\.ico)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*\\.png)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*\\.jpg)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*\\.svg)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*\\.woff)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*\\.woff2)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*\\.ttf)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "headers": [
     {
       "source": "/(.*\\.js)",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/javascript"
-        }
-      ]
+      "destination": "/$1"
     },
     {
       "source": "/(.*\\.css)",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/css"
-        }
-      ]
+      "destination": "/$1"
+    },
+    {
+      "source": "/(.*\\.ico)",
+      "destination": "/$1"
+    },
+    {
+      "source": "/(.*\\.png)",
+      "destination": "/$1"
+    },
+    {
+      "source": "/(.*\\.jpg)",
+      "destination": "/$1"
+    },
+    {
+      "source": "/(.*\\.svg)",
+      "destination": "/$1"
+    },
+    {
+      "source": "/(.*\\.woff)",
+      "destination": "/$1"
+    },
+    {
+      "source": "/(.*\\.woff2)",
+      "destination": "/$1"
+    },
+    {
+      "source": "/(.*\\.ttf)",
+      "destination": "/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
